@@ -1,5 +1,6 @@
 * Wed Jun 21 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
 - Update custom Puppet 3 functions to namespaced, Puppet 4 functions
+- Allow default identity and identities prefixed with unix-netgroup.
 
 * Mon Apr 17 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
 - Add EL7 and polkit 106+ support by allowing javascript rules
